# snippets

./: Compact WSL 2.md
ANTLR/: README.md
ANTLR/listener/: main.cpp
ANTLR/visitor/: Expr.g4  main.cpp
CMake/: CMakeLists.txt  main.cpp
CMake/lib/: CMakeLists.txt
Clang (Win) Shared Library/: l.cpp  l.hpp  t.cpp
Clang (Win) Static Library/: t.cpp
Icarus Verilog/: inverter.v  inverter_tb.v
Unity/: CMakeLists.txt
Unity/sorting/: CMakeLists.txt  sorting.c  sorting.h  test_sorting.c
